# PAI---Sudoku

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml
docs/: conf.py  index.rst  pai_sudoku.rst
pai_sudoku/: data_loader.py  game.py  grid.py  interface_qt.py  main_qt.py  stats_db.py
test_pai_sudoku/: basic_test.py  sudoku_test.py
